# agent-composer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PRD.md  README.md  TASKS.md  claude-progress.txt  feature_list.json  init.sh  playwright.config.ts
.claude/agents/: coding-prompt-executor.md  lint-error-resolver.md
.claude/commands/: coding-prompt.md  initializer-prompt.md
backend/: .env.example  README.md  pyproject.toml
backend/config/: agents.json  teams.json
backend/scripts/: run_model.py
backend/src/: __init__.py  agents.py  code_tools.py  config.py  config_routes.py  conversations.py  logging_config.py  main.py
backend/src/agui/: __init__.py  adapter.py
backend/src/api/: __init__.py  agents.py
backend/src/database/: __init__.py  connection.py  models.py
backend/src/runtime/: __init__.py  loader.py
backend/src/tools/: __init__.py  agno_toolkits.py  async_bridge.py  builtin.py  registry.py
backend/tests/: test_agui.py  test_e2e.py
dojo-examples/human-in-the-loop-example/: page.tsx  style.css
frontend/: .env.example  .gitignore  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/app/: layout.tsx
frontend/app/[integrationId]/: page.tsx
frontend/app/api/copilotkit/[[...slug]]/: route.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/api/: os.ts  routes.ts
frontend/src/components/: Chat.tsx  Header.tsx  Layout.tsx  MessageBubble.tsx  Sidebar.tsx  ToolCallCard.tsx  ToolCallsSection.tsx
frontend/src/components/chat/: AgentSelector.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageList.tsx  ConversationItem.tsx  ConversationList.tsx  FileAttachment.tsx  MessageBubble.tsx  index.ts
frontend/src/components/chat/Sidebar/: ConfigModal.tsx  Sidebar.tsx
frontend/src/hooks/: useAIStreamHandler.tsx  useAgents.ts  useChat.ts  useConversations.ts
frontend/src/pages/: AgentStudioPage.tsx  ConversationPage.tsx  MCPManagerPage.tsx  SettingsPage.tsx  TeamBuilderPage.tsx
frontend/src/services/: agui.ts  api.ts
frontend/src/stores/: agentStore.ts  settingsStore.ts
frontend/src/types/: agui.ts
frontend/test-results/: .last-run.json
frontend/tests/: chat.spec.ts
server/: index.ts  package.json
tests/: capture-request.spec.ts  debug.spec.ts  ui.spec.ts
