[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-composer"
version = "0.1.0"
description = "A local-first platform for designing, composing, and interacting with multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Agent Composer Team" }
]
dependencies = [
    "agno>=1.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.26.0",
    "keyring>=24.3.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
