[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-composer"
version = "0.1.0"
description = "A local-first platform for designing, composing, and interacting with multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Agent Composer Team" }
]
dependencies = [
    "agno>=1.5.0",
    "ag-ui-protocol>=0.1.0",
    "uvicorn>=0.32.0",
    "openai>=2.9.0",
    "fastapi>=0.124.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "ddgs>=7.0.0",
    # Google API for Gmail/Calendar toolkits
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    # arXiv toolkit
    "arxiv>=2.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.6.2",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
